# loader-cpp

./: .gitignore  meson.build  readme.md
include/: interface.h  logger.h
include/loader/: loader.h
include/register/: plugin.h  plugin_info.h  register.h
src/loader/: loader.cpp
testes/: idea.cpp  main.cpp  makefile  plugin.cpp
